# boost-ci

./: .appveyor.yml  .azure-pipelines.yml  .codecov.yml  .drone.star  .gitattributes  .travis.yml  .yamllint  CMake.md  CMakeLists.txt  README.md  README.template.md  SETUP-GHA.md  appveyor.yml  azure-pipelines.yml  build.jam  ci.yml  index.html  test.js  test2.js
.drone/: b2-ci-version-report.sh  boost.sh  drone.bat  drone.sh  lcov-report.sh
.github/workflows/: ci.yml  ci_test_exclude_jobs.yml  ci_test_include_jobs.yml  ci_test_no_jobs.yml  ci_test_opposite.yml  code-coverage.yml  old_ci.yml  reusable.yml
ci/: add-apt-keys.sh  add-apt-repositories.sh  build.bat  build.sh  cmake_build.sh  cmake_install_test.sh  cmake_subdir_test.sh  cmake_test.sh  codecov.ps1  codecov.sh  common_bootstrap.bat  common_install.bat  common_install.sh  coverity.sh  enforce.sh  get_libname.py  opencppcoverage.ps1  runcodecov.sh  set_num_jobs.sh  setup_bdde.sh  setup_ccache.sh  test_installed_cmake_config.sh
ci/appveyor/: cygwin-update-gcc.bat  cygwin-update.bat  cygwin64-update-gcc.bat  install.bat  install_icu.bat  mingw.bat
ci/azure-pipelines/: build.sh  enforce.sh  install.bat  install.sh
ci/drone/: freebsd-cxx-install.sh  functions.star  linux-cxx-install.sh  osx-cxx-install.sh  windows-cxx-install.bat
ci/github/: codecov.sh  coverity.sh  install.bat  install.sh  setup_bdde.sh
ci/travis/: bdde.sh  build.sh  codecov.sh  coverity.sh  cppcheck.sh  enforce.sh  install.sh  intelicc.cfg  intelicc.sh  valgrind.sh
docs/: code-coverage.md
include/boost/boost-ci/: boost_ci.hpp  test.hpp
master/: index.html
master/gcovr/: coverage-fixed.json  coverage-raw.json  index.boost-ci.6143fb1563f5aabc2a1e08a94e41e087.html  index.boost_ci.cpp.44103cc41392610d770990e683f982bf.html  index.boost_ci.hpp.248e0e60295a41f62f1fb81d6a238ad3.html  index.css  index.functions.html  index.html  index.js  index.src.25d902c24283ab8cfbac54dfa101ad31.html  summary.json  tree.json
master/gcovr/badges/: coverage.json
meta/: libraries.json
src/: boost_ci.cpp  symlink.test
templates/: .travis.yml  README.md  appveyor.yml  azure-pipelines.yml
test/: CMakeLists.txt  Jamfile  test.cpp  test2.hpp
test/cmake_install_test/: CMakeLists.txt
test/cmake_subdir_test/: CMakeLists.txt
test/cmake_test/: CMakeLists.txt  main.cpp
tools/: makebadges.sh
